# pluto-cli

./: AGENTS.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml
src/: main.rs
