[package]
name = "pluto-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A thin CLI launcher for the Pluto.jl notebook server"
authors = ["Bernardo Veronese"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/binado/pluto-cli"
keywords = ["julia", "pluto", "notebook", "launcher"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "Cargo.lock",
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/**",
]

[[bin]]
name = "pluto"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
